Added section one (html and css).

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   <nav class="nav">
     <div class="nav__left">
-      <img src="/images/logo.svg" alt="Easybank Logo">
+      <img src="./images/logo.svg" alt="Easybank Logo">
     </div>
     <ul class="nav__center">
       <li><a href="/">home</a></li>
@@ -35,19 +35,28 @@
     </div>
   </nav>
   <main>
-    <section class="one">
-      <header class="one__left">
-        <h1>Next generation digital banking</h1>
-        <p>Take your financial life online. Your Easybank account will be a one-stop-shop
-          for spending, saving, budgeting, investing, and much more.</p>
-        <button class="main-btn">
-          Request Invite
-        </button>
-      </header>
-      <div class="one__right">
+    <section class="intro">
+      <div class="intro__one">
+        <div class="intro__one-left">
+          <header>
+            <h1>Next generation digital banking</h1>
+            <p>Take your financial life online. Your Easybank account will be a one-stop-shop
+              for spending, saving, budgeting, investing, and much more.</p>
+            <button class="main-btn">
+              Request Invite
+            </button>
+          </header>
+        </div>
+        <div class="intro__one-right">
+          <img src="./images/bg-intro-desktop.svg" alt="">
+        </div>
+      </div>
+      <div class="intro__two">
+        <img src="./images/image-mockups.png" alt="">
+      </div>
+      <div class="intro__three">
 
       </div>
-
     </section>
   </main>
 
