--- a/index.html
+++ b/index.html
@@ -55,7 +55,70 @@
         <img src="./images/image-mockups.png" alt="">
       </div>
       <div class="intro__three">
-
+        <div class="intro__three-top">
+          <h2>Why chose Easybank?</h2>
+          <p>We leverage Open Banking to turn your bank account into your financial hub. Control your finances like
+            never before.
+          </p>
+        </div>
+        <div class="intro__three-bottom">
+          <div class="container">
+            <div class="icon">
+              <img src="./images/icon-online.svg" alt="">
+            </div>
+            <div class="title">
+              <h6>Online Banking</h6>
+            </div>
+            <div class="info">
+              <p>
+                Our modern web and mobile applications allow you to keep track of your finances wherever you are in the
+                world.
+              </p>
+            </div>
+          </div>
+          <div class="container">
+            <div class="icon">
+              <img src="./images/icon-budgeting.svg" alt="">
+            </div>
+            <div class="title">
+              <h6>Simple Budgeting</h6>
+            </div>
+            <div class="info">
+              <p>
+                See exactly where your money goes each month. Receive notifications when you’re close to hitting your
+                limits.
+              </p>
+            </div>
+          </div>
+          <div class="container">
+            <div class="icon">
+              <img src="./images/icon-onboarding.svg" alt="">
+            </div>
+            <div class="title">
+              <h6>Fast Onboarding</h6>
+            </div>
+            <div class="info">
+              <p>
+                We don’t do branches. Open your account in minutes online and start taking control of your finances
+                right away.
+              </p>
+            </div>
+          </div>
+          <div class="container">
+            <div class="icon">
+              <img src="./images/icon-api.svg" alt="">
+            </div>
+            <div class="title">
+              <h6>Open API</h6>
+            </div>
+            <div class="info">
+              <p>
+                Manage your savings, investments, pension, and much more from one account. Tracking your money has never
+                been easier.
+              </p>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
   </main>
@@ -71,26 +134,16 @@
 
 
 
-  Why choose Easybank?
 
-  We leverage Open Banking to turn your bank account into your financial hub. Control
-  your finances like never before.
 
-  Online Banking
-  Our modern web and mobile applications allow you to keep track of your finances
-  wherever you are in the world.
 
-  Simple Budgeting
-  See exactly where your money goes each month. Receive notifications when you’re
-  close to hitting your limits.
 
-  Fast Onboarding
-  We don’t do branches. Open your account in minutes online and start taking control
-  of your finances right away.
 
-  Open API
-  Manage your savings, investments, pension, and much more from one account. Tracking
-  your money has never been easier.
+
+
+
+
+
 
 
 
